[gd_scene load_steps=33 format=3 uid="uid://do4m5lfs4b0mn"]

[ext_resource type="Script" path="res://Boss2/scripts/boss_2.gd" id="1_r724d"]
[ext_resource type="Script" path="res://Boss2/scripts/boss_health_bar.gd" id="2_kva8h"]
[ext_resource type="Texture2D" uid="uid://dv1ind5x1ygh2" path="res://assets/ui/Boss health bar.png" id="3_qviqg"]
[ext_resource type="Texture2D" uid="uid://ic22ocylq7kj" path="res://assets/characters/Final boss 1 dancing sprite.png" id="4_o7dlg"]
[ext_resource type="Script" path="res://enemy/StateMachine/state_machine.gd" id="5_gh6hq"]
[ext_resource type="Script" path="res://Boss2/scripts/boss_chase.gd" id="6_lli8g"]
[ext_resource type="Script" path="res://Boss2/scripts/boss_grab.gd" id="7_5nxkb"]
[ext_resource type="PackedScene" uid="uid://d0seeddykde1t" path="res://char_components/scenes/health_component.tscn" id="8_mnqap"]
[ext_resource type="PackedScene" uid="uid://b21q77rjdvxm4" path="res://char_components/scenes/hitbox_component.tscn" id="9_xmudd"]
[ext_resource type="Texture2D" uid="uid://ocafwnec4wey" path="res://assets/characters/Final boss 1 lasso sprite 1.png" id="10_diwog"]
[ext_resource type="Texture2D" uid="uid://clw4gshnkj1vi" path="res://assets/characters/Final boss 1 lasso sprite 2.png" id="11_ejn2j"]
[ext_resource type="Texture2D" uid="uid://ckib3rbm6n6pn" path="res://Boss2/assets/Final boss 1 death sprite 1.png" id="12_7t0oj"]
[ext_resource type="Texture2D" uid="uid://dbt7fw87x2b2e" path="res://assets/characters/Final boss 1 grabbing sprite.png" id="12_tavmq"]
[ext_resource type="Texture2D" uid="uid://b2peuqualknw6" path="res://Boss2/assets/Final boss 1 death sprite 2.png" id="13_147al"]
[ext_resource type="Texture2D" uid="uid://bjahuyvy0co16" path="res://Boss2/assets/Final boss 1 death sprite 3.png" id="14_15kcd"]
[ext_resource type="Texture2D" uid="uid://drkpfy2k8og35" path="res://Boss2/assets/Final boss 1 death sprite 4.png" id="15_wb8fu"]
[ext_resource type="Texture2D" uid="uid://c7p01hpj2sqtf" path="res://Boss2/assets/Final boss 1 death sprite 5.png" id="16_lwrjo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6dlys"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dvi28"]
bg_color = Color(0.566174, 0, 0.0020701, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_meq7y"]
radius = 0.286641
height = 0.951147

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gb5n1"]
radius = 0.394897
height = 1.05118

[sub_resource type="Animation" id="Animation_7djr0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_o7dlg")]
}

[sub_resource type="Animation" id="Animation_3tp38"]
resource_name = "boss_death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("12_7t0oj"), ExtResource("13_147al"), ExtResource("14_15kcd"), ExtResource("15_wb8fu"), ExtResource("16_lwrjo")]
}
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.99, 1, 0, 0, 0, 1, 1, 0, -0.1, 0)

[sub_resource type="Animation" id="Animation_luput"]
resource_name = "boss_grab"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("4_o7dlg"), ExtResource("11_ejn2j"), ExtResource("10_diwog"), ExtResource("11_ejn2j"), ExtResource("10_diwog"), ExtResource("11_ejn2j")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_lasso_windup"
}]
}

[sub_resource type="Animation" id="Animation_0spk1"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("12_7t0oj"), ExtResource("13_147al"), ExtResource("14_15kcd"), ExtResource("15_wb8fu"), ExtResource("16_lwrjo")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2l1dx"]
_data = {
"RESET": SubResource("Animation_7djr0"),
"boss_death": SubResource("Animation_3tp38"),
"boss_grab": SubResource("Animation_luput"),
"death": SubResource("Animation_0spk1")
}

[sub_resource type="Animation" id="Animation_a17ya"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossLeap:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BossLeap:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_li2wj"]
resource_name = "grab_animation"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("12_tavmq"), ExtResource("12_tavmq"), ExtResource("12_tavmq")]
}

[sub_resource type="Animation" id="Animation_xngw4"]
resource_name = "leap_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossLeap:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BossLeap:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1.1, 1.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tpmkg"]
_data = {
"RESET": SubResource("Animation_a17ya"),
"grab_animation": SubResource("Animation_li2wj"),
"leap_animation": SubResource("Animation_xngw4")
}

[sub_resource type="Animation" id="Animation_3msck"]
resource_name = "boss_death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("12_7t0oj"), ExtResource("13_147al"), ExtResource("14_15kcd"), ExtResource("15_wb8fu"), ExtResource("16_lwrjo")]
}
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.99, 1, 0, 0, 0, 1, 1, 0, -0.1, 0)
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_death_sound"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dl5dv"]
_data = {
"boss_death": SubResource("Animation_3msck")
}

[node name="Boss2" type="CharacterBody3D" groups=["Enemies Group"]]
transform = Transform3D(0.998603, 0, 0, 0, 0.998603, 0, 0, 0, 0.998603, 0, 0, 0)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_r724d")

[node name="BossHealthBar" type="ProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -341.5
offset_top = -460.0
offset_right = 341.5
offset_bottom = -437.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.04, 1.24415)
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_6dlys")
theme_override_styles/fill = SubResource("StyleBoxFlat_dvi28")
value = 100.0
show_percentage = false
script = ExtResource("2_kva8h")

[node name="Sprite2D" type="Sprite2D" parent="BossHealthBar"]
position = Vector2(345.192, 12.0564)
scale = Vector2(0.255842, 0.262648)
texture = ExtResource("3_qviqg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-0.000384002, 0, -1.00002, 0, 1.00002, 0, 1.00002, 0, -0.000384002, 0.00424228, -0.00488292, -0.000590781)
shape = SubResource("CapsuleShape3D_meq7y")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.035, 0, 0, 0, 0.035, 0, 0, 0, 0.035, 0, 0, 0)
sorting_offset = 1.0
visibility_range_end = 20.0
shaded = true
texture = ExtResource("4_o7dlg")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
aabb = AABB(-0.570377, -0.556137, -0.565157, 1.14075, 1.11227, 1.13031)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("InitialState")]
script = ExtResource("5_gh6hq")
InitialState = NodePath("BossChase")

[node name="BossChase" type="Node" parent="StateMachine"]
script = ExtResource("6_lli8g")

[node name="BossGrab" type="Node" parent="StateMachine"]
script = ExtResource("7_5nxkb")

[node name="HealthComponent" parent="." instance=ExtResource("8_mnqap")]
MAX_HEALTH = 20.0

[node name="HitboxComponent" parent="." instance=ExtResource("9_xmudd")]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
collision_layer = 4
collision_mask = 2

[node name="Hitbox" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00183107, -0.0032959, -0.00120593)
shape = SubResource("CapsuleShape3D_gb5n1")

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1.05099, 0, 0, 0, 1.05099, 0, 0, 0, 0.998095, 0, 0.209989, 0)
target_position = Vector3(0, 0, 1)
collision_mask = 3

[node name="LassoAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2l1dx")
}

[node name="LeapAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tpmkg")
}

[node name="BossLeap" type="CanvasLayer" parent="."]
visible = false

[node name="BossLeap_Img" type="TextureRect" parent="BossLeap"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_tavmq")

[node name="BossDeath" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dl5dv")
}

[connection signal="boss2_die" from="HealthComponent" to="." method="_on_health_component_boss_2_die"]
